--- a/E_Migrant.App/E_Migrant.App.Presentacion/Pages/CrudMigrante/Create.cshtml
+++ b/E_Migrant.App/E_Migrant.App.Presentacion/Pages/CrudMigrante/Create.cshtml
@@ -53,7 +53,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Migrante.Email" class="control-label"></label>
-                <input asp-for="Migrante.Email" class="form-control" />
+                <input type="email" asp-for="Migrante.Email" class="form-control" />
                 <span asp-validation-for="Migrante.Email" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -85,12 +85,12 @@
 
             <div class="form-group">
                 <label asp-for="Migrante.Usuario" class="control-label"></label>
-                <input asp-for="Migrante.Usuario" class="form-control" />
+                <input asp-for="Migrante.Usuario" class="form-control" required/>
                 <span asp-validation-for="Migrante.Usuario" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Migrante.Contraseña" class="control-label"></label>
-                <input type= "password" asp-for="Migrante.Contraseña" class="form-control" />
+                <input type= "password" asp-for="Migrante.Contraseña" class="form-control" required/>
                 <span asp-validation-for="Migrante.Contraseña" class="text-danger"></span>
             </div>
             
