Reto 3, 4, 5, 35, 36 y 37, Primer intento CodigoAzulG7

--- a/E_Migrant.App/E_Migrant.App.Presentacion/Pages/CrudMigrante/Create.cshtml
+++ b/E_Migrant.App/E_Migrant.App.Presentacion/Pages/CrudMigrante/Create.cshtml
@@ -69,7 +69,7 @@
 
             <div class="form-group">
                 <label asp-for="Migrante.Ciudad" class="control-label"></label>
-                <select asp-for="CiudadID" class="form-control" asp-items="Model.listaCiudad" onchange="getValue()">
+                <select asp-for="CiudadID" class="form-control" asp-items="Model.listaCiudad" onchange="getValue()" required >
                     <option>Seleccione una ciudad</option>
                 </select>
                 <span asp-validation-for="Migrante.Ciudad" class="text-danger"></span>
