--- a/E_Migrant.App/E_Migrant.App.Presentacion/Pages/CrudEntidad/Edit.cshtml
+++ b/E_Migrant.App/E_Migrant.App.Presentacion/Pages/CrudEntidad/Edit.cshtml
@@ -29,6 +29,15 @@
                 <input asp-for="Entidad.Direccion" class="form-control" />
                 <span asp-validation-for="Entidad.Direccion" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="Entidad.Ciudad" class="control-label"></label>
+                <select asp-for="CiudadID" class="form-control" asp-items="Model.listaCiudad" onchange="getValue()">
+                    <option>Seleccione una Ciudad</option>
+                </select>
+                <span asp-validation-for="Entidad.Ciudad" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <label asp-for="Entidad.Telefono" class="control-label"></label>
                 <input asp-for="Entidad.Telefono" class="form-control" />
@@ -44,21 +53,42 @@
                 <input asp-for="Entidad.PaginaWeb" class="form-control" />
                 <span asp-validation-for="Entidad.PaginaWeb" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="Entidad.Sector" class="control-label"></label>
+                <select asp-for="SectorID" class="form-control" asp-items="Model.listaSector" onchange="getValue()">
+                    <option>Seleccione un sector</option>
+                </select>
+                <span asp-validation-for="Entidad.Sector" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Entidad.TipoServicios" class="control-label"></label>
+                <select asp-for="TipoServicioID" class="form-control" asp-items="Model.listaTipoServicio" onchange="getValue()">
+                    <option>Seleccione un Tipo de servicio</option>
+                </select>
+                <span asp-validation-for="Entidad.TipoServicios" class="text-danger"></span>
+            </div>
+
+            
             <div class="form-group">
                 <label asp-for="Entidad.Usuario" class="control-label"></label>
-                <input asp-for="Entidad.Usuario" class="form-control" />
+                <input asp-for="Entidad.Usuario" class="form-control" required/>
                 <span asp-validation-for="Entidad.Usuario" class="text-danger"></span>
             </div>
+            
             <div class="form-group">
                 <label asp-for="Entidad.Contraseña" class="control-label"></label>
-                <input asp-for="Entidad.Contraseña" class="form-control" />
+                <input asp-for="Entidad.Contraseña" class="form-control" required/>
                 <span asp-validation-for="Entidad.Contraseña" class="text-danger"></span>
             </div>
+            
             <div class="form-group">
                 <label asp-for="Entidad.rol" class="control-label"></label>
-                <input asp-for="Entidad.rol" class="form-control" />
+                <input asp-for="Entidad.rol" class="form-control" disabled/>
                 <span asp-validation-for="Entidad.rol" class="text-danger"></span>
             </div>
+            
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
