--- a/E_Migrant.App/E_Migrant.App.Presentacion/Pages/CrudMigrante/Details.cshtml
+++ b/E_Migrant.App/E_Migrant.App.Presentacion/Pages/CrudMigrante/Details.cshtml
@@ -23,12 +23,28 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Migrante.Apellidos)
         </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Migrante.TipoDocumento)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Migrante.TipoDocumento.TipoDocumento)
+        </dd>
+
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Migrante.NumeroDocumento)
         </dt>
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Migrante.NumeroDocumento)
         </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Migrante.PaisOrigen)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Migrante.PaisOrigen.NombrePais)
+        </dd>
+
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Migrante.FechaNacimiento)
         </dt>
@@ -53,6 +69,21 @@
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Migrante.DireccionActual)
         </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Migrante.Ciudad)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Migrante.Ciudad.NombreCiudad)
+        </dd>
+
+        <dt class="col-sm-2">
+            @Html.DisplayNameFor(model => model.Migrante.SituacionLaboral)
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Migrante.SituacionLaboral.TipoSituacionLaboral)
+        </dd>
+
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Migrante.Usuario)
         </dt>
@@ -62,18 +93,21 @@
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Migrante.Contraseña)
         </dt>
-        <dd class="col-sm-10">
+        <dd type="password" class="col-sm-10">
             @Html.DisplayFor(model => model.Migrante.Contraseña)
         </dd>
+        <!--
         <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.Migrante.rol)
         </dt>
+         
         <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Migrante.rol)
         </dd>
+        -->
     </dl>
 </div>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.Migrante.Id">Edit</a> |
-    <a asp-page="./Index">Back to List</a>
+    <!--<a asp-page="./Index">Back to List</a>-->
 </div>
