--- a/E_Migrant.App/E_Migrant.App.Presentacion/Pages/CrudMigrante/Edit.cshtml
+++ b/E_Migrant.App/E_Migrant.App.Presentacion/Pages/CrudMigrante/Edit.cshtml
@@ -24,11 +24,29 @@
                 <input asp-for="Migrante.Apellidos" class="form-control" />
                 <span asp-validation-for="Migrante.Apellidos" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="Migrante.TipoDocumento" class="control-label"></label>
+                <select asp-for="TiposID" class="form-control" asp-items="Model.listaTipos" onchange="getValue()" required>
+                    <option>Seleccione un tipo doc</option>
+                </select>
+                <span asp-validation-for="Migrante.TipoDocumento" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <label asp-for="Migrante.NumeroDocumento" class="control-label"></label>
                 <input asp-for="Migrante.NumeroDocumento" class="form-control" />
                 <span asp-validation-for="Migrante.NumeroDocumento" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="Migrante.PaisOrigen" class="control-label"></label>
+                <select asp-for="PaisID" class="form-control" asp-items="Model.listaPais" onchange="getValue()" required>
+                    <option>Seleccione un Pais Origen</option>
+                </select>
+                <span asp-validation-for="Migrante.PaisOrigen" class="text-danger"></span>
+            </div>
+
             <div class="form-group">
                 <label asp-for="Migrante.FechaNacimiento" class="control-label"></label>
                 <input asp-for="Migrante.FechaNacimiento" class="form-control" />
@@ -49,21 +67,39 @@
                 <input asp-for="Migrante.DireccionActual" class="form-control" />
                 <span asp-validation-for="Migrante.DireccionActual" class="text-danger"></span>
             </div>
+
+            <div class="form-group">
+                <label asp-for="Migrante.Ciudad" class="control-label"></label>
+                <select asp-for="CiudadID" class="form-control" asp-items="Model.listaCiudad" onchange="getValue()">
+                    <option>Seleccione una ciudad</option>
+                </select>
+                <span asp-validation-for="Migrante.Ciudad" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
+                <label asp-for="Migrante.SituacionLaboral" class="control-label"></label>
+                <select asp-for="SituacionLaboralID" class="form-control" asp-items="Model.listaSituacionLaboral" onchange="getValue()">
+                    <option>Seleccione una situacion laboral</option>
+                </select>
+                <span asp-validation-for="Migrante.SituacionLaboral" class="text-danger"></span>
+            </div>
             <div class="form-group">
                 <label asp-for="Migrante.Usuario" class="control-label"></label>
-                <input asp-for="Migrante.Usuario" class="form-control" />
+                <input asp-for="Migrante.Usuario" class="form-control" required/>
                 <span asp-validation-for="Migrante.Usuario" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Migrante.Contraseña" class="control-label"></label>
-                <input asp-for="Migrante.Contraseña" class="form-control" />
+                <input asp-for="Migrante.Contraseña" class="form-control" required/>
                 <span asp-validation-for="Migrante.Contraseña" class="text-danger"></span>
             </div>
+            
             <div class="form-group">
                 <label asp-for="Migrante.rol" class="control-label"></label>
-                <input asp-for="Migrante.rol" class="form-control" />
+                <input asp-for="Migrante.rol" class="form-control" disabled/>
                 <span asp-validation-for="Migrante.rol" class="text-danger"></span>
             </div>
+            
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
@@ -72,7 +108,7 @@
 </div>
 
 <div>
-    <a asp-page="./Index">Back to List</a>
+    <a asp-page="../Index">Inicio</a>
 </div>
 
 @section Scripts {
