--- a/E_Migrant.App/E_Migrant.App.Presentacion/Pages/Shared/_Layout.cshtml
+++ b/E_Migrant.App/E_Migrant.App.Presentacion/Pages/Shared/_Layout.cshtml
@@ -47,9 +47,9 @@
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-page="/CrudEntidad/Details" asp-route-id="@id">Ver datos</a>
                             </li>
-
+                             
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-page="/CrudServicio/Create" asp-route-id="@id">Crear Servicio</a>
+                                <a class="nav-link text-dark" asp-area="" asp-page="/CrudServicios/Create" >Crear Servicio</a>
                             </li>
 
                              <li class="nav-item">
